# Meridian-main

./: .editorconfig  .flake8  .gitignore  .gitleaks.toml  .globalconfig  .markdownlint.json  .vsconfig  AGENTS.md  AGENT_IMPLEMENTATION_SUMMARY.md  AGENT_QUICK_REFERENCE.md  CLAUDE.md  CONTEXTUAL_COMMANDS_IMPLEMENTATION_SUMMARY.md  CORPACTIONS_IMPLEMENTATION.md  Directory.Build.props  Directory.Packages.props  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  Meridian.sln  README.md  SYSTEM_TRAY_IMPLEMENTATION.md  desktop.ini  docfx.json  environment.yml  package-lock.json  package.json  prompt-generation-results.json
.artifacts/: link-repair-report.md
.claude/: settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml  labels.yml  markdown-link-check-config.json  pull_request_template_desktop.md  spellcheck-config.yml
Meridian Design System (3)/: CONTENT_FUNDAMENTALS.md  ICONOGRAPHY.md  INSPIRATION_BRIEF.md  README.md  SKILL.md  VISUAL_FOUNDATIONS.md  colors_and_type.css  governance-baseline.json  index.html
PROJECTS/: Phase_1.5_Preferred_and_Convertible_Equity_Support.md
archive/: README.md
benchmarks/: BOTTLENECK_REPORT.md  run-bottleneck-benchmarks.sh
config/: appsettings.sample.json  appsettings.schema.json  condition-codes.json  score-reason-registry.json  venue-mapping.json
docs/: DEPENDENCIES.md  HELP.md  README.md  WORKFLOW_GUIDE.md  toc.yml
issues/: phase-1-5-add-equityclassification-discriminator-and-preferredterms-domain-model.md  phase_1_5_1_add_equityclassification_discriminator_and_preferredterms_domain_model.md
make/: ai.mk  build.mk  desktop.mk  diagnostics.mk  docs.mk  install.mk  test.mk
native/cpptrader-host/: CMakeLists.txt  README.md
native/cpptrader-host/src/: main.cpp
scripts/: check_contract_compatibility_gate.py  check_program_state_consistency.py  check_workflow_docs_parity.py  compare_benchmarks.py  compare_run_contract.py  example-sharpe.csx  generate-diagrams.mjs  generate_contract_review_packet.py  generate_program_state_summary.py  report_canonicalization_drift.py  wpf_finance_ux_checks.py
tests/: Directory.Build.props  xunit.runner.json  (+2 more)
(+7135 files in other folders)
